k8s-config/istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: magento-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: http2
      protocol: HTTP2
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: magento
spec:
  host: magento
  subsets:
  - name: now
    labels:
      version: now
  - name: next
    labels:
      version: next
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: magento
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
    - route:
      - destination:
          host: magento
          subset: now
        weight: 50
      - destination:
          host: magento
          subset: next
        weight: 50
